[gd_scene load_steps=34 format=3 uid="uid://bafac2iwjnarw"]

[ext_resource type="Texture2D" uid="uid://bg4e0wpkiynn1" path="res://art/pack/Factions/Goblins/Troops/Barrel/Blue/Barrel_Blue.png" id="1_npscw"]
[ext_resource type="Script" path="res://scripts/goblin_enemy_blue.gd" id="1_q1qyq"]
[ext_resource type="Texture2D" uid="uid://b881imw74wtfo" path="res://art/pack/Effects/Explosion/Explosions.png" id="3_o0wuu"]
[ext_resource type="AudioStream" uid="uid://bepdwe855h1rf" path="res://music/bombSound.mp3" id="4_88w58"]

[sub_resource type="AtlasTexture" id="AtlasTexture_42ucu"]
atlas = ExtResource("1_npscw")
region = Rect2(0, 512, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1qg6r"]
atlas = ExtResource("1_npscw")
region = Rect2(128, 512, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ql7c7"]
atlas = ExtResource("1_npscw")
region = Rect2(256, 512, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_30ix3"]
atlas = ExtResource("1_npscw")
region = Rect2(256, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kx4va"]
atlas = ExtResource("1_npscw")
region = Rect2(128, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dmrrv"]
atlas = ExtResource("1_npscw")
region = Rect2(0, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hja65"]
atlas = ExtResource("1_npscw")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rwyg0"]
atlas = ExtResource("1_npscw")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6kjx"]
atlas = ExtResource("1_npscw")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_g4i4y"]
atlas = ExtResource("3_o0wuu")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_566ia"]
atlas = ExtResource("3_o0wuu")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_tddi3"]
atlas = ExtResource("3_o0wuu")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_11lma"]
atlas = ExtResource("3_o0wuu")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ogbaw"]
atlas = ExtResource("3_o0wuu")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_n3cxx"]
atlas = ExtResource("3_o0wuu")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_evc7r"]
atlas = ExtResource("3_o0wuu")
region = Rect2(1152, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_s4w2w"]
atlas = ExtResource("3_o0wuu")
region = Rect2(1344, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgo4j"]
atlas = ExtResource("3_o0wuu")
region = Rect2(1536, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_3mqaa"]
atlas = ExtResource("1_npscw")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bnyou"]
atlas = ExtResource("1_npscw")
region = Rect2(384, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdxpi"]
atlas = ExtResource("1_npscw")
region = Rect2(512, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3yyil"]
atlas = ExtResource("1_npscw")
region = Rect2(640, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_i81s2"]
atlas = ExtResource("1_npscw")
region = Rect2(0, 512, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6mr5k"]
atlas = ExtResource("1_npscw")
region = Rect2(128, 512, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qtxdy"]
atlas = ExtResource("1_npscw")
region = Rect2(256, 512, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_kpj7y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_42ucu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1qg6r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ql7c7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ql7c7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ql7c7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_30ix3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_30ix3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kx4va")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kx4va")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dmrrv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dmrrv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dmrrv")
}],
"loop": true,
"name": &"attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hja65")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rwyg0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6kjx")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g4i4y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_566ia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tddi3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_11lma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ogbaw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3cxx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_evc7r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s4w2w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgo4j")
}],
"loop": true,
"name": &"explosion",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3mqaa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bnyou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdxpi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3yyil")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i81s2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6mr5k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtxdy")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_t671u"]
radius = 28.0713

[sub_resource type="CircleShape2D" id="CircleShape2D_sypnn"]
radius = 40.05

[sub_resource type="CircleShape2D" id="CircleShape2D_yf68y"]
radius = 98.0

[node name="GoblinEnemy" type="CharacterBody2D"]
platform_floor_layers = 4294901760
script = ExtResource("1_q1qyq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_kpj7y")
animation = &"attack"

[node name="EnemyCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_t671u")

[node name="enemy_hitbox" type="Area2D" parent="."]

[node name="HitboxCollisionShape" type="CollisionShape2D" parent="enemy_hitbox"]
shape = SubResource("CircleShape2D_sypnn")

[node name="take_damage_cooldown" type="Timer" parent="."]
wait_time = 0.45

[node name="explosion_cooldown" type="Timer" parent="."]
wait_time = 1.5

[node name="death_duration" type="Timer" parent="."]
wait_time = 0.5

[node name="explosion_zone" type="Area2D" parent="."]

[node name="ExplosionZone" type="CollisionShape2D" parent="explosion_zone"]
shape = SubResource("CircleShape2D_yf68y")

[node name="healthbar" type="ProgressBar" parent="."]
modulate = Color(0, 0, 0.745098, 1)
offset_left = -28.0
offset_top = -44.0
offset_right = 252.0
offset_bottom = 18.0
scale = Vector2(0.2, 0.2)
show_percentage = false

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_88w58")
bus = &"sound"

[connection signal="area_shape_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_area_shape_entered"]
[connection signal="body_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_exited"]
[connection signal="body_shape_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_shape_entered"]
[connection signal="timeout" from="take_damage_cooldown" to="." method="_on_take_damage_cooldown_timeout"]
[connection signal="timeout" from="explosion_cooldown" to="." method="_on_explosion_cooldown_timeout"]
[connection signal="timeout" from="death_duration" to="." method="_on_death_duration_timeout"]
[connection signal="body_entered" from="explosion_zone" to="." method="_on_explosion_zone_body_entered"]
[connection signal="body_exited" from="explosion_zone" to="." method="_on_explosion_zone_body_exited"]
